# llm-merger

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
client/: next.config.mjs  package-lock.json  package.json
client/src/app/: api.js  globals.css  layout.js  layout.jsx  not-found.jsx  page.js  page.jsx  reduxProvider.js
client/src/app/chat/: page.jsx
client/src/app/providers/: index.js
client/src/app/store/: authSlice.js
client/src/components/: index.jsx
client/src/components/auth/: Login.jsx  ProtectedRoute.jsx  Register.jsx  index.jsx
client/src/components/chat/: ChatHistory.jsx  ChatHistoryButton.jsx  ChatInputSection.jsx  ChatMessages.jsx  ChatMessagesSection.jsx  ChatSidebar.jsx  Chatbot.jsx  History.jsx  HistoryButton.jsx  Sidebar.jsx  index.jsx
client/src/components/globals/: Navbar.jsx
client/src/providers/: index.jsx  reduxProvider.js
client/src/store/: authSlice.js  historySlice.js  reduxstore.js
client/src/utils/: api.js  index.js  markdown.jsx
llm_core/: main.py
server/: README.md  pyproject.toml  requirements.txt
server/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py
server/conversations/: models.py  serializers.py  urls.py  views.py
server/conversations/migrations/: 0001_initial.py  0002_message_deepseek_content.py  0003_rename_ai_content_message_gemini_content.py  0004_message_merged_content.py
server/llm_core/: __init__.py  deepseek_model.py  gemini_model.py  main.py  utils.py
server/server/: settings.py  urls.py
(+22 files in other folders)
