[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Abhishek Kashyap <abhik5567@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.7.0"
langchain = "^0.3.20"
blessed = "^1.20.0"
langchain-google-genai = "^2.0.11"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
